--- a/Website.css
+++ b/Website.css
@@ -17,7 +17,86 @@
 .nav-active {
     background-color: rgb(29, 29, 29);
 }
+/* fade link */
+#link-1 {
+    transition: 0.5s;
+}
 
+#link-2 {
+    transition: 0.5s;
+}
+
+#link-3 {
+    transition: 0.5s;
+}
+
+#link-4 {
+    transition: 0.5s;
+}
+
+#link-5 {
+    transition: 0.5s;
+}
+/* Follow link */
+.nav-1 {
+    background-color: rgb(75, 74, 74);
+    color: rgb(216, 204, 96);
+    transition: 0.6s;
+    cursor: pointer;
+    border-radius: 20px;
+    padding: 10px;
+    outline: none;
+    border: none;
+    transition: 0.6s;
+}
+
+.nav-2 {
+    background-color: rgb(75, 74, 74);
+    color: rgb(216, 204, 96);
+    transition: 0.6s;
+    cursor: pointer;
+    border-radius: 20px;
+    padding: 10px;
+    outline: none;
+    border: none;
+    transition: 0.6s;
+}
+
+.nav-3 {
+    background-color: rgb(75, 74, 74);
+    color: rgb(216, 204, 96);
+    transition: 0.6s;
+    cursor: pointer;
+    border-radius: 20px;
+    padding: 10px;
+    outline: none;
+    border: none;
+    transition: 0.6s;
+}
+
+.nav-4 {
+    background-color: rgb(75, 74, 74);
+    color: rgb(216, 204, 96);
+    transition: 0.6s;
+    cursor: pointer;
+    border-radius: 20px;
+    padding: 10px;
+    outline: none;
+    border: none;
+    transition: 0.6s;
+}
+
+.nav-5 {
+    background-color: rgb(75, 74, 74);
+    color: rgb(216, 204, 96);
+    transition: 0.6s;
+    cursor: pointer;
+    border-radius: 20px;
+    padding: 10px;
+    outline: none;
+    border: none;
+    transition: 0.6s;
+}
 /* Tophead */
 
 .top-header {
@@ -66,12 +145,10 @@
 }
 
 .nav-bar ul a:hover {
-    background-color: rgb(75, 74, 74);
     color: rgb(216, 204, 96);
     transition: 0.6s;
     cursor: pointer;
-    border-radius: 20px;
-    padding: 10px;
+    font-size: 35px;
 }
 
 .top-header .profile {
@@ -330,8 +407,9 @@
 
 /* Final Item-8 */
 /* Final Profile */
-
+/* Assignment */
 .Assignment {
+    position: relative;
     background-color: rgb(238, 238, 238);
     height: 1400px;
 }
@@ -358,50 +436,283 @@
 }
 
 .Assignment .item-1 {
+    position: relative;
     grid-column: 1 / span 1;
     text-align: center;
+    width: 50%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .Assignment .item-1 img {
-    width: 50%;
+    width: 100%;
     border-radius: 10px;
-    box-shadow: 1px 1px 5px black;
+    transition: 0.6s;
+}
+
+.Assignment .item-1:hover img{
+    transform: scale(1.1);
+    cursor: pointer;
+    box-shadow: 1px 1px 20px black;
+    opacity: 0.10;
+}
+
+.Assignment .item-1 h1 {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    font-family: 'Redressed', cursive;
+    font-size: 90px;
+    color: rgb(0, 0, 0);
+    display: none;
+    transition: 0.5s;
+}
+
+.Assignment .item-1:hover h1 {
+    display: block;
+    transition: 0.5s;
+}
+
+.Assignment .item-1 button {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    width: 35%;
+    height: 25%;
+    opacity: 0;
+    transition: 0.6s;
+    border-radius: 100%;
+    background-color:  rgb(255, 255, 255);
+    border: none;
+    font-family: 'Redressed', cursive;
+    font-size: 50px;
+    outline: none;
+}
+
+.Assignment .item-1:hover button{
+    opacity: 1;
+    cursor: pointer;
+}
+
+.Assignment .item-1 button:hover {
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 .Assignment .item-2 {
+    position: relative;
     grid-column: 2 / span 1;
     text-align: center;
+    width: 50%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .Assignment .item-2 img {
-    width: 50%;
+    width: 100%;
     border-radius: 10px;
-    box-shadow: 1px 1px 5px black
+    transition: 0.6s;
+}
+
+.Assignment .item-2:hover img{
+    transform: scale(1.1);
+    cursor: pointer;
+    box-shadow: 1px 1px 20px black;
+    opacity: 0.10;
+}
+
+.Assignment .item-2 h1 {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    font-family: 'Redressed', cursive;
+    font-size: 90px;
+    color: rgb(0, 0, 0);
+    display: none;
+    transition: 0.5s;
+}
+
+.Assignment .item-2:hover h1 {
+    display: block;
+    transition: 0.5s;
+}
+
+.Assignment .item-2 button {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    width: 35%;
+    height: 25%;
+    opacity: 0;
+    transition: 0.6s;
+    border-radius: 100%;
+    background-color:  rgb(255, 255, 255);
+    border: none;
+    font-family: 'Redressed', cursive;
+    font-size: 50px;
+    outline: none;
+}
+
+.Assignment .item-2:hover button{
+    opacity: 1;
+    cursor: pointer;
+}
+
+.Assignment .item-2 button:hover {
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 .Assignment .item-3 {
+    position: relative;
     grid-column: 1 / span 1;
     grid-row: 2 / span 1;
     text-align: center;
+    width: 50%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .Assignment .item-3 img {
-    width: 50%;
+    width: 100%;
     border-radius: 10px;
-    box-shadow: 1px 1px 5px black
+    transition: 0.6s;
+}
+
+.Assignment .item-3:hover img{
+    transform: scale(1.1);
+    cursor: pointer;
+    box-shadow: 1px 1px 20px black;
+    opacity: 0.10;
+}
+
+.Assignment .item-3 h1 {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    font-family: 'Redressed', cursive;
+    font-size: 90px;
+    color: rgb(0, 0, 0);
+    display: none;
+    transition: 0.5s;
+}
+
+.Assignment .item-3:hover h1 {
+    display: block;
+    transition: 0.5s;
+}
+
+.Assignment .item-3 button {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    width: 35%;
+    height: 25%;
+    opacity: 0;
+    transition: 0.6s;
+    border-radius: 100%;
+    background-color:  rgb(255, 255, 255);
+    border: none;
+    font-family: 'Redressed', cursive;
+    font-size: 50px;
+    outline: none;
+}
+
+.Assignment .item-3:hover button{
+    opacity: 1;
+    cursor: pointer;
+}
+
+.Assignment .item-3 button:hover {
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 .Assignment .item-4 {
+    position: relative;
     grid-column: 2 / span 1;
     grid-row: 2 / span 1;
     text-align: center;
+    width: 50%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .Assignment .item-4 img {
-    width: 50%;
+    width: 100%;
     border-radius: 10px;
-    box-shadow: 1px 1px 5px black
+    transition: 0.6s;
 }
 
+.Assignment .item-4:hover img{
+    transform: scale(1.1);
+    cursor: pointer;
+    box-shadow: 1px 1px 20px black;
+    opacity: 0.10;
+}
 
+.Assignment .item-4 h1 {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    font-family: 'Redressed', cursive;
+    font-size: 90px;
+    color: rgb(0, 0, 0);
+    display: none;
+    transition: 0.5s;
+}
 
+.Assignment .item-4:hover h1 {
+    display: block;
+    transition: 0.5s;
+}
+
+.Assignment .item-4 button {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    width: 35%;
+    height: 25%;
+    opacity: 0;
+    transition: 0.6s;
+    border-radius: 100%;
+    background-color:  rgb(255, 255, 255);
+    border: none;
+    font-family: 'Redressed', cursive;
+    font-size: 50px;
+    outline: none;
+}
+
+.Assignment .item-4:hover button{
+    opacity: 1;
+    cursor: pointer;
+}
+
+.Assignment .item-4 button:hover {
+    background-color: rgb(0, 0, 0);
+    color: white;
+}
+
+.Assignment .click-view {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    font-family: 'Redressed', cursive;
+    font-size: 25px;
+}
+
+.Assignment .click-view h1 {
+    color: rgb(141, 127, 5);
+}
+/* Final Assignment */
+
+ 
