--- a/Website.css
+++ b/Website.css
@@ -100,7 +100,8 @@
 /* Tophead */
 
 .top-header {
-    height: 1020px;
+    max-height: 1020px;
+    height: 100%;
     width: 100%;
     background-size: cover;
     background-image: url(img//background.jpg);
@@ -182,6 +183,13 @@
     font-family: Lucida Console;
     margin-top: 4%;
     font-size: 20px;
+    padding-bottom: 13%;
+}
+
+@media screen and ( max-width: 1260px ) {
+    .nav-bar ul {
+        width: 60%;
+    }
 }
 
 /* Final Tophead */
@@ -208,7 +216,9 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 770px;
+    max-height: 800px;
+    height: 100%;
+    margin-bottom: 10%;
 }
 
 .about-me .profile img {
