--- a/Website.css
+++ b/Website.css
@@ -106,8 +106,6 @@
 
 .top-header {
     position: relative;
-    max-height: 1020px;
-    height: 100%;
     width: 100%;
     background-size: cover;
     background-image: url(img//background.jpg);
@@ -137,7 +135,6 @@
 
 .nav-bar .logo {
     background-color: rgb(0, 0, 0);
-    height: 3800px;
     width: 10%;
     position: absolute;
     font-size: 45px;
@@ -262,8 +259,6 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    max-height: 800px;
-    height: 100%;
     margin-bottom: 10%;
 }
 
@@ -468,7 +463,6 @@
     width: 100%;
     position: relative;
     background-color: rgb(238, 238, 238);
-    height: 1400px;
 }
 
 .Assignment .headline {
@@ -489,6 +483,7 @@
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
+    padding-bottom: 5%;
     row-gap: 5%;
 }
 
@@ -757,53 +752,6 @@
     background-color: rgb(0, 0, 0);
     color: white;
 }
-
-.Assignment .click-view {
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    font-family: 'Redressed', cursive;
-    font-size: 25px;
-}
-
-.Assignment .click-view h1 {
-    color: rgb(141, 127, 5);
-}
-
-@media only screen and ( max-width: 1024px ) {
-    .Assignment {
-        height: 2500px;
-    }
-    .Assignment .headline {
-        padding-top: 20%;
-    }
-    .Assignment .grid-container {
-        margin-top: 14%;
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: 25% 25% 25% 25%;
-        row-gap: 5%;
-    }
-    .Assignment .item-1 {
-        grid-row: 1 / span 1;
-    }
-    .Assignment .item-2 {
-        grid-column: 1 / span 1;
-        grid-row: 2 / span 1;
-    }
-    .Assignment .item-3 {
-        grid-row: 3 / span 1;
-    }
-    .Assignment .item-4 {
-        grid-column: 1 / span 1;
-        grid-row: 4 / span 1;
-    }
-    .Assignment .click-view {
-        display: none;
-    }
-}
-
 
 /* Final Assignment */
 /* skill */
@@ -1213,7 +1161,6 @@
 
 .contact {
     background-color: rgb(238, 238, 238);
-    height: 1000px;
 }
 
 .contact .headline {
@@ -1241,6 +1188,7 @@
     width: 50%;
     height: 400px;
     border: none;
+    margin-bottom: 5%;
 }
 
 .contact .detail .address {
@@ -1340,12 +1288,11 @@
 .footer {
     background-color: black;
     color: white;
-    height: 200px;
     width: 100%;
     text-align: center;
     font-size: 30px;
     font-family: 'Akaya Telivigala', cursive;
-    padding-top: 5%;
+    padding: 5%;
 }
 
 
