--- a/assignment4/satay.css
+++ b/assignment4/satay.css
@@ -415,6 +415,9 @@ body {
 .footer {
     background-color: rgb(31, 31, 100);
     height: 100px;
+    color: #fff;
+    padding: 5%;
+    padding-left: 30%;
 }
 
 .logo {
