--- a/Javascript/assign5/index.css
+++ b/Javascript/assign5/index.css
@@ -144,6 +144,15 @@ body {
     font-size: 20px;
 }
 
+@media only screen and ( max-width:1441px ) {
+    .box-ass5 {
+        margin-top: 100px;
+        margin-left: 280px;
+    }
+    .footer {
+        bottom: 350px;
+    }
+}
 
 
 
